2013-07-10 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKOutgoingProxy.m: Add missing include. (Reported by Philippe Roussell)
	Implement some stuff missing for proper D-Bus facing objects.
	* Source/DKObjectPathNode.h: Expose another method for DKOutgoingProxy to use.
	* Source/DKPort.m: Add some debugging for object path name handling.
	* Examples/HelloWorldService/main.m: Tweak export.
	* Examples/HelloWorldService/test.xml: Add test interface. 

2013-07-02 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/DKProxy.h
	* Source/DKProxy+Private.h
	* Source/DKProxy.m:
	Expose some DKProxy internals for subclassing.
	* Source/DKOutgoingProxy.m: Allow introspection data to be added from a
	file (not a public API, though)

2013-07-01 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check clang_Cursor_getArgument() since it's missing in earlier libclang versions
	* configure: Regenerate
	* ChangeLog: Reformat a few inconsistencies

2013-07-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKOutgoingProxy.m: Implement -handleDBusMessage: on the outgoing proxy.

2013-05-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Replace deprecated self->isa access with object_getClass()
	* Documentation/Introduction.texi: Fix typo

2012-11-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpoint.m: Replace incorrect NSDebugMLog with NSDebugFLog.
	Reported by Philippe Roussell.

2012-09-23 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKNotificationCenter.m:
	Deal with clang warning about casting SEL to uintptr_t.

2012-08-22 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check for libclang.
	* configure: Regenerate.
	* Documentation/install.texi: Document optional libclang
	requirement.
	* INSTALL: Regenerate
	* Source/config.h.in: Macro for libclang check.
	* Source/DKBoxingUtils.h
	* Source/DKBoxingUtils.m:
	Add D-Bus type derivation based on libclang. Fix potential index out of